move to new simplified CI

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skip_missing_interpreters = true
 
 [testenv]
 description = run tests with {basepython}
-deps = pip >= 19.0.1
+deps = pip == 19.0.3
 setenv = COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
@@ -14,9 +14,7 @@ install_command = python -m pip install {opts} {packages} --disable-pip-version-
 commands = coverage run --source=virtualenv \
                 -m pytest tests \
                         {posargs:\
-                                 --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
-                                 --timeout=180 \
-                                 -n 0 \
+                                 --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/junit.{envname}.xml} \
                         }
            coverage combine
            coverage report --show-missing
