--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,12 @@
 name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
 
-variables:
-  "System.PreferGit": true
-  PIP_NO_WARN_SCRIPT_LOCATION: '0'
-  PIP_DISABLE_PIP_VERSION_CHECK: '1'
-  PYTEST_ADDOPTS: "-vv -ra --showlocals"
-  PYTEST_XDIST_PROC_NR: 'auto'
-  CI_RUN: "yes"
+resources:
+  repositories:
+  - repository: tox
+    type: github
+    endpoint: github-gb
+    name: tox-dev/azure-pipelines-template
+    ref: master
 
 trigger:
   batch: true
@@ -14,142 +14,47 @@ trigger:
     include:
     - master
     - refs/tags/*
-  paths:
-    exclude:
-    - LICENSE.txt
-    - HOWTORELEASE.rst
-    - AUTHORS.txt
-    - CONTRIBUTING.rst
-    - .gitignore
-    - .github/*
+
+variables:
+  PYTEST_ADDOPTS: "-v -v -ra --showlocals"
+  PYTEST_XDIST_PROC_NR: 'auto'
+  CI_RUN: 'yes'
 
 jobs:
-- template: azure-run-tox-env.yml
-  parameters: {tox: fix_lint, python: '3.7'}
-- template: azure-run-tox-env.yml
-  parameters: {tox: embed, python: '3.7'}
-- template: azure-run-tox-env.yml
-  parameters: {tox: docs, python: '3.7'}
-- template: azure-run-tox-env.yml
-  parameters: {tox: package_readme, python: '3.7'}
-
-- template: azure-run-tox-env.yml
-  parameters: {tox: pypy, python: pypy2, os: linux}
-- template: azure-run-tox-env.yml
-  parameters: {tox: pypy3, python: pypy3, os: linux}
-
-- template: azure-run-tox-env.yml
-  parameters: {tox: py37, python: '3.7', os: windows}
-- template: azure-run-tox-env.yml
-  parameters: {tox: py36, python: '3.6', os: windows}
-- template: azure-run-tox-env.yml
-  parameters: {tox: py35, python: '3.5', os: windows}
-- template: azure-run-tox-env.yml
-  parameters: {tox: py34, python: '3.4', os: windows}
-- template: azure-run-tox-env.yml
-  parameters: {tox: py27, python: '2.7', os: windows}
-
-- template: azure-run-tox-env.yml
-  parameters: {tox: py37, python: '3.7', os: linux}
-- template: azure-run-tox-env.yml
-  parameters: {tox: py36, python: '3.6', os: linux}
-- template: azure-run-tox-env.yml
-  parameters: {tox: py35, python: '3.5', os: linux}
-- template: azure-run-tox-env.yml
-  parameters: {tox: py34, python: '3.4', os: linux}
-- template: azure-run-tox-env.yml
-  parameters: {tox: py27, python: '2.7', os: linux}
-
-- template: azure-run-tox-env.yml
-  parameters: {tox: py36, python: '3.6', os: macOs}
-- template: azure-run-tox-env.yml
-  parameters: {tox: py27, python: '2.7', os: macOs}
-
-- template: azure-run-tox-env.yml
-  parameters: {tox: cross_python2, python: '3.7', os: linux}
-- template: azure-run-tox-env.yml
-  parameters: {tox: cross_python3, python: '3.7', os: linux}
-
-- job: report_coverage
-  pool: {vmImage: "Ubuntu-16.04"}
-  dependsOn:
-  - windows_py37
-  - windows_py36
-  - windows_py35
-  - windows_py34
-  - windows_py27
-  - linux_py37
-  - linux_py36
-  - linux_py35
-  - linux_py34
-  - linux_py27
-  - linux_pypy3
-  - linux_pypy
-  - macOS_py36
-  - macOS_py27
-  steps:
-  - task: DownloadBuildArtifacts@0
-    displayName: download coverage files for run
-    inputs:
-      buildType: current
-      downloadType: specific
-      itemPattern: coverage-*/*
-      downloadPath: $(Build.StagingDirectory)
-
-  - task: UsePythonVersion@0
-    displayName: setup python
-    inputs:
-      versionSpec: 3.7
-
-  - script: |
-      python -c '
-      from pathlib import Path
-      import shutil
-
-      from_folder = Path("$(Build.StagingDirectory)")
-      destination_folder = Path("$(System.DefaultWorkingDirectory)") / ".tox"
-      destination_folder.mkdir()
-      for coverage_file in from_folder.glob("*/.coverage"):
-          destination = destination_folder / f".coverage.{coverage_file.parent.name[9:]}"
-          print(f"{coverage_file} copy to {destination}")
-          shutil.copy(str(coverage_file), str(destination))'
-    displayName: move coverage files into .tox
-
-  - script: 'python -m pip install -U pip tox --pre'
-    displayName: install tox
-
-  - script: 'python -m tox -e coverage'
-    displayName: create coverage report via tox
-
-  - task: PublishCodeCoverageResults@1
-    displayName: publish overall coverage report to Azure
-    inputs:
-      codeCoverageTool: 'Cobertura'
-      summaryFileLocation: '$(System.DefaultWorkingDirectory)/.tox/coverage.xml'
-      failIfCoverageEmpty: true
+- template: run-tox-env.yml@tox
+  parameters:
+    jobs:
+      fix_lint: null
+      embed: null
+      cross_python2: null
+      cross_python3: null
+      docs: null
+      py37:
+        image: [linux, windows, macOs]
+      py36:
+        image: [linux, windows, macOs]
+      py35:
+        image: [linux, windows, macOs]
+      py34:
+        image: [linux, windows, macOs]
+      py27:
+        image: [linux, windows, macOs]
+      dev: null
+      package_readme: null
+    before:
+      - script: 'sudo apt-get update && sudo apt-get install fish csh'
+        condition: and(succeeded(), eq(variables['image_name'], 'linux'), in(variables['TOXENV'], 'py37', 'py36', 'py35', 'py34', 'py27'))
+        displayName: install fish and csh via apt-get
+      - script: 'brew update -vvv && brew install fish tcsh'
+        condition: and(succeeded(), eq(variables['image_name'], 'macOs'), in(variables['TOXENV'], 'py37', 'py36', 'py35', 'py34', 'py27'))
+        displayName: install fish and csh via brew
+    coverage:
+      with_toxenv: 'coverage' # generate .tox/.coverage, .tox/coverage.xml after test run
+      for_envs: [py37, py36, py35, py34, py27]
 
 - ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
-  - job: publish
-    dependsOn:
-    - report_coverage
-    - linux_fix_lint
-    - linux_docs
-    - linux_embed
-    - linux_package_readme
-    condition: succeeded()
-    pool: {vmImage: "Ubuntu-16.04"}
-    steps:
-    - task: UsePythonVersion@0
-      displayName: setup python3.7
-      inputs: {versionSpec: '3.7'}
-    - task: TwineAuthenticate@0
-      inputs:
-        externalFeeds: 'gb'
-    - script: 'python3.7 -m pip install -U twine pip tox'
-      displayName: "acquire build tools"
-    - script: 'python3.7 -m pip wheel -w "$(System.DefaultWorkingDirectory)/w" --no-deps .'
-      displayName: "build wheel"
-    - script: 'python3.7 -m tox -e py --sdistonly'
-      displayName: "build sdist"
-    - script: 'python3.7 -m twine upload -r pypi-gb --config-file $(PYPIRC_PATH) .tox/dist/* $(System.DefaultWorkingDirectory)/w/*'
-      displayName: "upload sdist and wheel to PyPi"
+  - template: publish-pypi.yml@tox
+    parameters:
+      external_feed: 'gb'
+      pypi_remote: 'pypi-gb'
+      dependsOn: [fix_lint, embed, cross_python3, cross_python3, docs, report_coverage, dev, package_readme]
