drop Jython support
CI runs very long - can no longer maintain it and have very little usage

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.6.1
-envlist = fix_lint, embed, py{27,34,35,36,37}, pypy{,3}, jython, cross_python{2,3}, docs, package_readme
+envlist = fix_lint, embed, py{27,34,35,36,37}, pypy{,3}, cross_python{2,3}, docs, package_readme
 isolated_build = true
 skip_missing_interpreters = true
 
@@ -8,8 +8,6 @@ skip_missing_interpreters = true
 description = run tests with {basepython}
 deps = pip >= 19.0.1
 setenv = COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-         # separate jython form other python caches
-         jython: PIP_NO_CACHE_DIR = off
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
@@ -17,14 +15,11 @@ commands = coverage run --source=virtualenv \
                 -m pytest tests \
                         {posargs:\
                                  --junitxml={env:JUNIT_XML_FILE:{toxworkdir}/.test.{envname}.xml} \
-                                  !jython: --timeout=180 \
-                                  !jython: -n 0 \
+                                 --timeout=180 \
+                                 -n 0 \
                         }
            coverage combine
-           !jython: coverage report --show-missing
-
-[testenv:jython]
-deps = pip == 18.1.0
+           coverage report --show-missing
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
