--- a/azure-run-tox-env.yml
+++ b/azure-run-tox-env.yml
@@ -19,25 +19,10 @@ jobs:
 
   steps:
   # ensure the required Python versions are available
-  - ${{ if notIn(parameters.python, 'jython') }}:
-    - task: UsePythonVersion@0
-      displayName: setup python
-      inputs:
-        versionSpec: ${{ parameters.python }}
-
-  # provision jython
-  - ${{ if eq(parameters.tox, 'jython') }}:
-    - script: "wget http://search.maven.org/remotecontent?filepath=org/python/jython-installer/2.7.1/jython-installer-2.7.1.jar -O $(Agent.ToolsDirectory)/jython.jar"
-      displayName: download jython
-
-    - script: "java -jar $(Agent.ToolsDirectory)/jython.jar -sd $(Agent.ToolsDirectory)/jython -e demo src doc"
-      displayName: install jython
-
-    - script: echo "##vso[task.setvariable variable=PATH]$(Agent.ToolsDirectory)/jython/bin:$(PATH)"
-      displayName: setvarStep
-
-    - script: echo $(PATH)
-      displayName: show PATH
+  - task: UsePythonVersion@0
+    displayName: setup python
+    inputs:
+      versionSpec: ${{ parameters.python }}
 
   - script: "python -c \"import sys; print(sys.version); print(sys.executable)\""
     displayName: show python information
@@ -49,7 +34,7 @@ jobs:
     displayName: install tox
 
   # provision additional shells
-  - ${{ if or( startsWith(parameters.tox, 'py'), eq(parameters.tox, 'jython')) }}:
+  - ${{ if startsWith(parameters.tox, 'py') }}:
       - ${{if eq(parameters.os, 'linux') }}:
           - script: "sudo apt-get update && sudo apt-get install fish csh"
             displayName: install fish and csh
@@ -59,21 +44,17 @@ jobs:
           - script: "brew install fish tcsh"
             displayName: install fish and csh
 
-  - ${{ if eq(parameters.tox, 'jython') }}:
-      - script: "python -m pip install --user $(System.DefaultWorkingDirectory)"
-        displayName: install dev venv for tox
-
   - script: ${{ format('python -m tox -e {0} --notest --skip-missing-interpreters=false', parameters.tox) }}
     displayName: install test dependencies
 
-  - ${{ if or( startsWith(parameters.tox, 'py'), eq(parameters.tox, 'jython') ) }}:
+  - ${{ if  startsWith(parameters.tox, 'py') }}:
     - script: python -m tox -e coverage --notest --skip-missing-interpreters=false
       displayName: install coverage dependencies
 
   - script: ${{ format('python -m tox --skip-missing-interpreters=false -e {0}', parameters.tox) }}
     displayName: run tests
 
-  - ${{ if or( startsWith(parameters.tox, 'py'), eq(parameters.tox, 'jython') ) }}:
+  - ${{ if  startsWith(parameters.tox, 'py') }}:
     - task: PublishTestResults@2
       displayName: publish test results via junit
       condition: succeededOrFailed()
@@ -82,12 +63,12 @@ jobs:
         testResultsFiles: ${{ format('$(System.DefaultWorkingDirectory)/.tox/.test.{0}.xml', parameters.tox) }}
         testRunTitle: ${{ format('{0}_{1}', parameters.os, parameters.tox) }}
 
-  - ${{ if or( startsWith(parameters.tox, 'py'), eq(parameters.tox, 'jython') ) }}:
+  - ${{ if  startsWith(parameters.tox, 'py') }}:
     - script: "python -m tox --skip-missing-interpreters=false -e coverage"
       displayName: create coverag report
       condition: succeededOrFailed()
 
-  - ${{ if or( startsWith(parameters.tox, 'py'), eq(parameters.tox, 'jython') ) }}:
+  - ${{ if  startsWith(parameters.tox, 'py') }}:
     - task: CopyFiles@2
       displayName: move coverage files into staging area
       condition: succeededOrFailed()
