--- a/setup.cfg
+++ b/setup.cfg
@@ -41,10 +41,10 @@ python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
 testing = mock;python_version<"3.3"
           pytest >= 4.0.0, <5
           coverage >= 4.5.0, <5
-          pytest-timeout >= 1.3.0, <2; platform_python_implementation!="Jython"
+          pytest-timeout >= 1.3.0, <2
           xonsh; python_version>="3.5"
           six >= 1.10.0, < 2
-          pytest-xdist; platform_python_implementation!="Jython"
+          pytest-xdist
           pytest-localserver
           pypiserver
 docs = sphinx >= 1.8.0, < 2
