--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/ambv/black
-    rev: 19.3b0
+    rev: 19.10b0
     hooks:
     -   id: black
         args: [--safe]
@@ -15,13 +15,13 @@ repos:
     rev: v1.9.3
     hooks:
     -   id: seed-isort-config
-        args: [--application-directories, '.']
+        args: [--application-directories, '.:src']
 -   repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.21
     hooks:
     -   id: isort
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v2.4.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -34,10 +34,10 @@ repos:
         additional_dependencies: ["flake8-bugbear == 19.8.0"]
         language_version: python3.7
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v1.24.1
+    rev: v1.25.1
     hooks:
     -   id: pyupgrade
 -   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.4.1
+    rev: v1.4.2
     hooks:
     -   id: rst-backticks
