--- a/setup.cfg
+++ b/setup.cfg
@@ -1,64 +1,69 @@
 [metadata]
 name = virtualenv
+version = attr: virtualenv.__version__
 description = Virtual Python Environment builder
 long_description = file: README.rst
 keywords = virtual, environments, isolated
 maintainer = Bernat Gabor
-author = Ian Bicking
+author = Bernat Gabor
 maintainer-email = gaborjbernat@gmail.com
-author-email = ianb@colorstudy.com
+author-email = gaborjbernat@gmail.com
 url = https://virtualenv.pypa.io/
 project_urls =
     Source=https://github.com/pypa/virtualenv
     Tracker=https://github.com/pypa/virtualenv/issues
-classifiers = Development Status :: 5 - Production/Stable
-              Intended Audience :: Developers
-              License :: OSI Approved :: MIT License
-              Operating System :: POSIX
-              Operating System :: Microsoft :: Windows
-              Operating System :: MacOS :: MacOS X
-              Topic :: Software Development :: Testing
-              Topic :: Software Development :: Libraries
-              Topic :: Utilities
-              Programming Language :: Python :: 2
-              Programming Language :: Python :: 2.7
-              Programming Language :: Python :: 3
-              Programming Language :: Python :: 3.4
-              Programming Language :: Python :: 3.5
-              Programming Language :: Python :: 3.6
-              Programming Language :: Python :: 3.7
+classifiers =
+    Development Status :: 3 - Alpha
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Operating System :: POSIX
+    Operating System :: Microsoft :: Windows
+    Operating System :: MacOS :: MacOS X
+    Topic :: Software Development :: Testing
+    Topic :: Software Development :: Libraries
+    Topic :: Utilities
 platforms = any
 license = MIT
 license_file = LICENSE.txt
 
 [options]
 packages = find:
-include_package_data = True
+package_dir =
+    =src
 zip_safe = True
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
+install_requires =
+    six >= 1.12.0, < 2
+    attrs
+    pathlib2 >= 2.3.3, < 3
+    appdirs >= 1.4.3
+[options.packages.find]
+where = src
 
 [options.extras_require]
-testing = mock;python_version<"3.3"
-          pytest >= 4.0.0, <5
-          coverage >= 4.5.0, <5
-          pytest-timeout >= 1.3.0, <2
-          xonsh; python_version>="3.5"
-          six >= 1.10.0, < 2
-          pytest-xdist
-          pytest-localserver
-          pypiserver
-docs = sphinx >= 1.8.0, < 2
-       towncrier >= 18.5.0
-       sphinx_rtd_theme >= 0.4.2, < 1
-
-[options.packages.find]
-where = .
+testing =
+    pytest >= 4.0.0, <6
+    coverage >= 4.5.0, < 5
+    pytest-mock
+docs =
+    sphinx >= 2.0.0, < 3
+    towncrier >= 18.5.0
+    sphinx_rtd_theme >= 0.4.2, < 1
 
 [options.package_data]
-virtualenv_support = *.whl
+virtualenv.seed.wheels = *.whl
 
 [options.entry_points]
-console_scripts = virtualenv=virtualenv:main
+console_scripts =
+    virtualenv=virtualenv.__main__:run
 
 [sdist]
 formats = gztar
@@ -66,16 +71,10 @@ formats = gztar
 [bdist_wheel]
 universal = true
 
-[coverage:run]
-branch = false
-parallel = true
-
-[coverage:report]
-skip_covered = True
-show_missing = True
-
-[coverage:paths]
-source = .
-         .tox/*/*/site-packages
-         .tox/*/*/*/site-packages
-         */s
+[tool:pytest]
+markers =
+    bash
+    csh
+    fish
+    pwsh
+    xonsh
