--- a/tox.ini
+++ b/tox.ini
@@ -84,7 +84,7 @@ description = format the code base to adhere to our styles, and complain about w
 basepython = python3.7
 passenv = *
 deps = {[testenv]deps}
-       pre-commit == 1.12.0
+       pre-commit >= 1.12.0, <2
 skip_install = True
 commands = pre-commit run --all-files --show-diff-on-failure
            python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
