--- a/setup.cfg
+++ b/setup.cfg
@@ -78,6 +78,13 @@ virtualenv.seed =
     pip = virtualenv.seed.embed.pip_invoke:PipInvoke
     link-app-data = virtualenv.seed.embed.link_app_data:LinkFromAppData
 virtualenv.activate =
+    bash = virtualenv.activation.bash:BashActivator
+    cshell = virtualenv.activation.cshell:CShellActivator
+    dos = virtualenv.activation.dos:DOSActivator
+    fish = virtualenv.activation.fish:FishActivator
+    power-shell = virtualenv.activation.powershell:PowerShellActivator
+    python = virtualenv.activation.python:PythonActivator
+    xonosh = virtualenv.activation.xonosh:XonoshActivator
 [sdist]
 formats = gztar
 
