Move triggers to code configuration
- also enable all PR triggers CI

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,11 +14,18 @@ trigger:
     - master
     - rewrite
     - refs/tags/*
+
 pr:
   branches:
     include:
-    - master
-    - rewrite
+    - '*'
+
+schedules:
+- cron: "12 0 * * *"
+  displayName: Daily build
+  branches:
+    include: [ master, rewrite ]
+  always: true
 
 variables:
   PYTEST_ADDOPTS: "-v -v -ra --showlocals"
