fix activation script packaging
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,12 @@ docs =
 
 [options.package_data]
 virtualenv.seed.embed.wheels = *.whl
+virtualenv.activation.bash = *.sh
+virtualenv.activation.cshell = *.csh
+virtualenv.activation.dos = *.bat
+virtualenv.activation.fish = *.fish
+virtualenv.activation.powershell = *.ps1
+virtualenv.activation.xonosh = *.xsh
 
 [options.entry_points]
 console_scripts =
