--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,8 @@ where = src
 testing =
     pytest >= 4.0.0, <6
     coverage >= 4.5.0, < 5
-    pytest-mock
+    pytest-mock >= 1.12.1, <2
+    xonsh >= 0.9.13, <1; python_version > '3.4'
 docs =
     sphinx >= 2.0.0, < 3
     towncrier >= 18.5.0
