it's batch not dos

--- a/setup.cfg
+++ b/setup.cfg
@@ -87,7 +87,7 @@ virtualenv.seed =
 virtualenv.activate =
     bash = virtualenv.activation.bash:BashActivator
     cshell = virtualenv.activation.cshell:CShellActivator
-    dos = virtualenv.activation.dos:DOSActivator
+    batch = virtualenv.activation.batch:BatchActivator
     fish = virtualenv.activation.fish:FishActivator
     power-shell = virtualenv.activation.powershell:PowerShellActivator
     python = virtualenv.activation.python:PythonActivator
