--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ docs =
 virtualenv.seed.embed.wheels = *.whl
 virtualenv.activation.bash = *.sh
 virtualenv.activation.cshell = *.csh
-virtualenv.activation.dos = *.bat
+virtualenv.activation.batch = *.bat
 virtualenv.activation.fish = *.fish
 virtualenv.activation.powershell = *.ps1
 virtualenv.activation.xonosh = *.xsh
