--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,8 @@ where = src
 testing =
     pytest >= 4.0.0, <6
     coverage >= 4.5.0, < 5
-    pytest-mock
+    pytest-mock >= 1.12.1, <2
+    xonsh >= 0.9.13, <1; python_version > '3.4'
 docs =
     sphinx >= 2.0.0, < 3
     towncrier >= 18.5.0
@@ -61,6 +62,12 @@ docs =
 
 [options.package_data]
 virtualenv.seed.embed.wheels = *.whl
+virtualenv.activation.bash = *.sh
+virtualenv.activation.cshell = *.csh
+virtualenv.activation.batch = *.bat
+virtualenv.activation.fish = *.fish
+virtualenv.activation.powershell = *.ps1
+virtualenv.activation.xonosh = *.xsh
 
 [options.entry_points]
 console_scripts =
@@ -78,6 +85,13 @@ virtualenv.seed =
     pip = virtualenv.seed.embed.pip_invoke:PipInvoke
     link-app-data = virtualenv.seed.embed.link_app_data:LinkFromAppData
 virtualenv.activate =
+    bash = virtualenv.activation.bash:BashActivator
+    cshell = virtualenv.activation.cshell:CShellActivator
+    batch = virtualenv.activation.batch:BatchActivator
+    fish = virtualenv.activation.fish:FishActivator
+    power-shell = virtualenv.activation.powershell:PowerShellActivator
+    python = virtualenv.activation.python:PythonActivator
+    xonosh = virtualenv.activation.xonosh:XonoshActivator
 [sdist]
 formats = gztar
 
