--- a/setup.cfg
+++ b/setup.cfg
@@ -42,9 +42,9 @@ zip_safe = True
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
 install_requires =
     six >= 1.12.0, < 2
-    pathlib2 >= 2.3.3, < 3
     appdirs >= 1.4.3
     entrypoints >= 0.3, <1
+    pathlib2 >= 2.3.3, < 3; python_version < '3.4'
     distlib >= 0.3.0, <1; sys.platform == 'win32'
 [options.packages.find]
 where = src
