do not install pathlib python 2 windows
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ install_requires =
     six >= 1.12.0, < 2
     appdirs >= 1.4.3
     entrypoints >= 0.3, <1
-    pathlib2 >= 2.3.3, < 3; python_version < '3.4'
+    pathlib2 >= 2.3.3, < 3; python_version < '3.4' and sys.platform != 'win32'
     distlib >= 0.3.0, <1; sys.platform == 'win32'
 [options.packages.find]
 where = src
