fix app data logic
Ensure that what ran with virtualenv 17 will continue running in a post
rewrite world minus the deprecated flags, plus the relocatable feature.

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -83,7 +83,7 @@ virtualenv.create =
 virtualenv.seed =
     none = virtualenv.seed.none:NoneSeeder
     pip = virtualenv.seed.embed.pip_invoke:PipInvoke
-    link-app-data = virtualenv.seed.embed.link_app_data:LinkFromAppData
+    app-data = virtualenv.seed.via_app_data.via_app_data:FromAppData
 virtualenv.activate =
     bash = virtualenv.activation.bash:BashActivator
     cshell = virtualenv.activation.cshell:CShellActivator
