support for pypy2
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,6 +47,10 @@ jobs:
         image: [linux, windows, macOs]
       py27:
         image: [linux, windows, macOs]
+      pypy:
+        image: [linux, windows, macOs]
+      pypy3:
+        image: [linux, windows, macOs]
       fix_lint:
         image: [linux, windows]
       docs:
