--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ envlist =
     py35,
     py34,
     py27,
+    pypy,
+    pypy3,
     coverage
 isolated_build = true
 skip_missing_interpreters = true
@@ -24,7 +26,7 @@ passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
 commands =
-    python -c 'from os.path import sep; file = open(r"{envsitepackagesdir}\{\}coverage-virtualenv.pth".format(sep), "w"); file.write("import coverage; coverage.process_startup()")'
+    python -c 'from os.path import sep; file = open(r"{envsitepackagesdir}\{\}coverage-virtualenv.pth".format(sep), "w"); file.write("import coverage; coverage.process_startup()"); file.close()'
     coverage erase
 
     coverage run\
@@ -60,6 +62,8 @@ depends =
     py35,
     py34,
     py27,
+    pypy,
+    pypy3,
 parallel_show_output = True
 
 [testenv:docs]
