--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ setenv =
     COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
+    PYTHONIOENCODING=utf-8
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
