--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,8 +28,7 @@ schedules:
   always: true
 
 variables:
-  PYTEST_ADDOPTS: "-v -v -ra --showlocals --durations=15"
-  PYTEST_XDIST_PROC_NR: 'auto'
+  PYTEST_ADDOPTS: "-vv --tb=long --durations=10"
   CI_RUN: 'yes'
   UPGRADE_ADVISORY: 'yes'
 
