--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,8 +28,7 @@ schedules:
   always: true
 
 variables:
-  PYTEST_ADDOPTS: "-v -v -ra --showlocals --durations=15"
-  PYTEST_XDIST_PROC_NR: 'auto'
+  PYTEST_ADDOPTS: "-vv --durations=10"
   CI_RUN: 'yes'
   UPGRADE_ADVISORY: 'yes'
 
@@ -47,6 +46,10 @@ jobs:
         image: [linux, windows, macOs]
       py27:
         image: [linux, windows, macOs]
+      pypy:
+        image: [linux, windows, macOs]
+      pypy3:
+        image: [linux, windows, macOs]
       fix_lint:
         image: [linux, windows]
       docs:
@@ -58,28 +61,38 @@ jobs:
       dev: null
     before:
       - script: 'sudo apt-get update -y && sudo apt-get install fish csh'
-        condition: and(succeeded(), eq(variables['image_name'], 'linux'), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35', 'py27'))
+        condition: and(succeeded(), eq(variables['image_name'], 'linux'), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35', 'py27', 'pypy', 'pypy3'))
         displayName: install fish and csh via apt-get
       - script: 'brew update -vvv && brew install fish tcsh'
-        condition: and(succeeded(), eq(variables['image_name'], 'macOs'), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35', 'py27'))
+        condition: and(succeeded(), eq(variables['image_name'], 'macOs'), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35', 'py27', 'pypy', 'pypy3'))
         displayName: install fish and csh via brew
       - task: UsePythonVersion@0
+        condition: and(succeeded(), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35'))
+        displayName: provision cpython 2
+        inputs:
+          versionSpec: '2.7'
+      - task: UsePythonVersion@0
         condition: and(succeeded(), in(variables['TOXENV'], 'py27'))
-        displayName: provision python 3
+        displayName: provision cpython 3
         inputs:
           versionSpec: '3.8'
       - task: UsePythonVersion@0
-        condition: and(succeeded(), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35'))
-        displayName: provision python 2
+        condition: and(succeeded(), in(variables['TOXENV'], 'pypy'))
+        displayName: provision pypy 3
         inputs:
-          versionSpec: '2.7'
+          versionSpec: 'pypy3'
+      - task: UsePythonVersion@0
+        condition: and(succeeded(), in(variables['TOXENV'], 'pypy3'))
+        displayName: provision pypy 2
+        inputs:
+          versionSpec: 'pypy2'
     coverage:
       with_toxenv: 'coverage' # generate .tox/.coverage, .tox/coverage.xml after test run
-      for_envs: [py38, py37, py36, py35, py27]
+      for_envs: [py38, py37, py36, py35, py27, pypy, pypy3]
 
 - ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
   - template: publish-pypi.yml@tox
     parameters:
       external_feed: 'gb'
       pypi_remote: 'pypi-gb'
-      dependsOn: [fix_lint, embed, cross_python3, cross_python3, docs, report_coverage, dev, package_readme]
+      dependsOn: [fix_lint, embed, docs, report_coverage, dev, package_readme]
