--- a/setup.cfg
+++ b/setup.cfg
@@ -79,6 +79,10 @@ virtualenv.create =
     cpython3-win = virtualenv.interpreters.create.cpython.cpython3:CPython3Windows
     cpython2-posix = virtualenv.interpreters.create.cpython.cpython2:CPython2Posix
     cpython2-win = virtualenv.interpreters.create.cpython.cpython2:CPython2Windows
+    pypy2-posix = virtualenv.interpreters.create.pypy.pypy2:PyPy2Posix
+    pypy2-win = virtualenv.interpreters.create.pypy.pypy2:Pypy2Windows
+    pypy3-posix = virtualenv.interpreters.create.pypy.pypy3:PyPy3Posix
+    pypy3-win = virtualenv.interpreters.create.pypy.pypy3:Pypy3Windows
     venv = virtualenv.interpreters.create.venv:Venv
 virtualenv.seed =
     none = virtualenv.seed.none:NoneSeeder
@@ -106,3 +110,4 @@ markers =
     pwsh
     xonsh
 junit_family = xunit2
+addopts = --tb=auto -ra --showlocals
