--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
 install_requires =
     six >= 1.12.0, < 2
     appdirs >= 1.4.3
-    entrypoints >= 0.3, <1
+    importlib-metadata >= 0.12, <2;python_version<"3.8"
     pathlib2 >= 2.3.3, < 3; python_version < '3.4' and sys.platform != 'win32'
     distlib >= 0.3.0, <1; sys.platform == 'win32'
 [options.packages.find]
