xonosh is actually just xonsh
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,7 +67,7 @@ virtualenv.activation.cshell = *.csh
 virtualenv.activation.batch = *.bat
 virtualenv.activation.fish = *.fish
 virtualenv.activation.powershell = *.ps1
-virtualenv.activation.xonosh = *.xsh
+virtualenv.activation.xonsh = *.xsh
 
 [options.entry_points]
 console_scripts =
@@ -95,7 +95,7 @@ virtualenv.activate =
     fish = virtualenv.activation.fish:FishActivator
     power-shell = virtualenv.activation.powershell:PowerShellActivator
     python = virtualenv.activation.python:PythonActivator
-    xonosh = virtualenv.activation.xonosh:XonoshActivator
+    xonsh = virtualenv.activation.xonsh:XonshActivator
 [sdist]
 formats = gztar
 
