power-shell should be just powershell
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,7 +93,7 @@ virtualenv.activate =
     cshell = virtualenv.activation.cshell:CShellActivator
     batch = virtualenv.activation.batch:BatchActivator
     fish = virtualenv.activation.fish:FishActivator
-    power-shell = virtualenv.activation.powershell:PowerShellActivator
+    powershell = virtualenv.activation.powershell:PowerShellActivator
     python = virtualenv.activation.python:PythonActivator
     xonsh = virtualenv.activation.xonsh:XonshActivator
 [sdist]
