--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ install_requires =
     six >= 1.12.0, < 2
     appdirs >= 1.4.3
     importlib-metadata >= 0.12, <2;python_version<"3.8"
+    importlib-resources >= 1.0, <2;python_version<"3.7"
     pathlib2 >= 2.3.3, < 3; python_version < '3.4' and sys.platform != 'win32'
     distlib >= 0.3.0, <1; sys.platform == 'win32'
 [options.packages.find]
