also install wheel with seed packages
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/tox.ini
+++ b/tox.ini
@@ -90,7 +90,6 @@ commands =
 description = upgrade pip/wheels/setuptools to latest
 skip_install = true
 deps =
-    pathlib2
     black
 passenv = UPGRADE_ADVISORY
 changedir = {toxinidir}/tasks
@@ -114,7 +113,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = _subprocess,appdirs,coverage,git,packaging,pathlib2,pytest,setuptools,six
+known_third_party = _subprocess,appdirs,coverage,git,packaging,pytest,setuptools,six
 
 [flake8]
 max-complexity = 22
