beutify setup.cfg
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,78 +3,63 @@ name = virtualenv
 version = attr: virtualenv.__version__
 description = Virtual Python Environment builder
 long_description = file: README.rst
+long_description_content_type = text/x-rst
+url = https://virtualenv.pypa.io/
+author = Bernat Gabor
+license = MIT
+license_file = LICENSE.txt
+platforms = any
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Operating System :: MacOS :: MacOS X
+    Operating System :: Microsoft :: Windows
+    Operating System :: POSIX
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Topic :: Software Development :: Libraries
+    Topic :: Software Development :: Testing
+    Topic :: Utilities
+author-email = gaborjbernat@gmail.com
 keywords = virtual, environments, isolated
 maintainer = Bernat Gabor
-author = Bernat Gabor
 maintainer-email = gaborjbernat@gmail.com
-author-email = gaborjbernat@gmail.com
-url = https://virtualenv.pypa.io/
 project_urls =
     Source=https://github.com/pypa/virtualenv
     Tracker=https://github.com/pypa/virtualenv/issues
-classifiers =
-    Development Status :: 5 - Production/Stable
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.5
-    Programming Language :: Python :: 3.4
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
-    Intended Audience :: Developers
-    License :: OSI Approved :: MIT License
-    Operating System :: POSIX
-    Operating System :: Microsoft :: Windows
-    Operating System :: MacOS :: MacOS X
-    Topic :: Software Development :: Testing
-    Topic :: Software Development :: Libraries
-    Topic :: Utilities
-platforms = any
-license = MIT
-license_file = LICENSE.txt
 
 [options]
 packages = find:
+install_requires =
+    appdirs>=1.4.3
+    six>=1.12.0,<2
+    distlib>=0.3.0,<1;sys.platform == 'win32'
+    importlib-metadata>=0.12,<2;python_version<"3.8"
+    importlib-resources>=1.0,<2;python_version<"3.7"
+    pathlib2>=2.3.3,<3;python_version < '3.4' and sys.platform != 'win32'
+python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
 package_dir =
     =src
 zip_safe = True
-python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
-install_requires =
-    six >= 1.12.0, < 2
-    appdirs >= 1.4.3
-    importlib-metadata >= 0.12, <2;python_version<"3.8"
-    importlib-resources >= 1.0, <2;python_version<"3.7"
-    pathlib2 >= 2.3.3, < 3; python_version < '3.4' and sys.platform != 'win32'
-    distlib >= 0.3.0, <1; sys.platform == 'win32'
-[options.packages.find]
-where = src
-
-[options.extras_require]
-testing =
-    pytest >= 4.0.0, <6
-    coverage >= 4.5.1, <6
-    pytest-mock >= 1.12.1, <2
-    xonsh >= 0.9.13, <1; python_version > '3.4'
-docs =
-    sphinx >= 2.0.0, < 3
-    towncrier >= 18.5.0
-    sphinx_rtd_theme >= 0.4.2, < 1
-
-[options.package_data]
-virtualenv.seed.embed.wheels = *.whl
-virtualenv.activation.bash = *.sh
-virtualenv.activation.cshell = *.csh
-virtualenv.activation.batch = *.bat
-virtualenv.activation.fish = *.fish
-virtualenv.activation.powershell = *.ps1
-virtualenv.activation.xonsh = *.xsh
 
 [options.entry_points]
 console_scripts =
     virtualenv=virtualenv.__main__:run
-virtualenv.discovery =
-    builtin = virtualenv.interpreters.discovery.builtin:Builtin
+virtualenv.activate =
+    bash = virtualenv.activation.bash:BashActivator
+    cshell = virtualenv.activation.cshell:CShellActivator
+    batch = virtualenv.activation.batch:BatchActivator
+    fish = virtualenv.activation.fish:FishActivator
+    powershell = virtualenv.activation.powershell:PowerShellActivator
+    python = virtualenv.activation.python:PythonActivator
+    xonsh = virtualenv.activation.xonsh:XonshActivator
 virtualenv.create =
     venv = virtualenv.interpreters.create.venv:Venv
     cpython3-posix = virtualenv.interpreters.create.cpython.cpython3:CPython3Posix
@@ -85,18 +70,36 @@ virtualenv.create =
     pypy2-win = virtualenv.interpreters.create.pypy.pypy2:Pypy2Windows
     pypy3-posix = virtualenv.interpreters.create.pypy.pypy3:PyPy3Posix
     pypy3-win = virtualenv.interpreters.create.pypy.pypy3:Pypy3Windows
+virtualenv.discovery =
+    builtin = virtualenv.interpreters.discovery.builtin:Builtin
 virtualenv.seed =
     none = virtualenv.seed.none:NoneSeeder
     pip = virtualenv.seed.embed.pip_invoke:PipInvoke
     app-data = virtualenv.seed.via_app_data.via_app_data:FromAppData
-virtualenv.activate =
-    bash = virtualenv.activation.bash:BashActivator
-    cshell = virtualenv.activation.cshell:CShellActivator
-    batch = virtualenv.activation.batch:BatchActivator
-    fish = virtualenv.activation.fish:FishActivator
-    powershell = virtualenv.activation.powershell:PowerShellActivator
-    python = virtualenv.activation.python:PythonActivator
-    xonsh = virtualenv.activation.xonsh:XonshActivator
+
+[options.extras_require]
+docs =
+    sphinx >= 2.0.0, < 3
+    towncrier >= 18.5.0
+    sphinx_rtd_theme >= 0.4.2, < 1
+testing =
+    pytest >= 4.0.0, <6
+    coverage >= 4.5.1, <6
+    pytest-mock >= 1.12.1, <2
+    xonsh >= 0.9.13, <1; python_version > '3.4'
+
+[options.package_data]
+virtualenv.activation.bash = *.sh
+virtualenv.activation.batch = *.bat
+virtualenv.activation.cshell = *.csh
+virtualenv.activation.fish = *.fish
+virtualenv.activation.powershell = *.ps1
+virtualenv.activation.xonsh = *.xsh
+virtualenv.seed.embed.wheels = *.whl
+
+[options.packages.find]
+where = src
+
 [sdist]
 formats = gztar
 
