--- a/setup.cfg
+++ b/setup.cfg
@@ -61,17 +61,17 @@ virtualenv.activate =
     python = virtualenv.activation.python:PythonActivator
     xonsh = virtualenv.activation.xonsh:XonshActivator
 virtualenv.create =
-    venv = virtualenv.interpreters.create.venv:Venv
-    cpython3-posix = virtualenv.interpreters.create.cpython.cpython3:CPython3Posix
-    cpython3-win = virtualenv.interpreters.create.cpython.cpython3:CPython3Windows
-    cpython2-posix = virtualenv.interpreters.create.cpython.cpython2:CPython2Posix
-    cpython2-win = virtualenv.interpreters.create.cpython.cpython2:CPython2Windows
-    pypy2-posix = virtualenv.interpreters.create.pypy.pypy2:PyPy2Posix
-    pypy2-win = virtualenv.interpreters.create.pypy.pypy2:Pypy2Windows
-    pypy3-posix = virtualenv.interpreters.create.pypy.pypy3:PyPy3Posix
-    pypy3-win = virtualenv.interpreters.create.pypy.pypy3:Pypy3Windows
+    venv = virtualenv.create.via_global_ref.venv:Venv
+    cpython3-posix = virtualenv.create.via_global_ref.builtin.cpython.cpython3:CPython3Posix
+    cpython3-win = virtualenv.create.via_global_ref.builtin.cpython.cpython3:CPython3Windows
+    cpython2-posix = virtualenv.create.via_global_ref.builtin.cpython.cpython2:CPython2Posix
+    cpython2-win = virtualenv.create.via_global_ref.builtin.cpython.cpython2:CPython2Windows
+    pypy2-posix = virtualenv.create.via_global_ref.builtin.pypy.pypy2:PyPy2Posix
+    pypy2-win = virtualenv.create.via_global_ref.builtin.pypy.pypy2:Pypy2Windows
+    pypy3-posix = virtualenv.create.via_global_ref.builtin.pypy.pypy3:PyPy3Posix
+    pypy3-win = virtualenv.create.via_global_ref.builtin.pypy.pypy3:Pypy3Windows
 virtualenv.discovery =
-    builtin = virtualenv.interpreters.discovery.builtin:Builtin
+    builtin = virtualenv.discovery.builtin:Builtin
 virtualenv.seed =
     none = virtualenv.seed.none:NoneSeeder
     pip = virtualenv.seed.embed.pip_invoke:PipInvoke
