pypy add lib on Linux
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,7 @@ jobs:
       pypy:
         image: [linux, windows, macOs]
       pypy3:
-        image: [linux, windows, macOs]
+        image: [linux, vs2017-win2016, macOs]
       fix_lint:
         image: [linux, windows]
       zipapp:
