try fix pypy windows
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,13 +65,9 @@ jobs:
       - script: 'sudo apt-get update -y && sudo apt-get install fish csh'
         condition: and(succeeded(), eq(variables['image_name'], 'linux'), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35', 'py27', 'pypy', 'pypy3'))
         displayName: install fish and csh via apt-get
-      - script: 'brew update -vvv && brew install fish tcsh tree'
+      - script: 'brew update -vvv && brew install fish tcsh'
         condition: and(succeeded(), eq(variables['image_name'], 'macOs'), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35', 'py27', 'pypy', 'pypy3'))
         displayName: install fish and csh via brew
-      - script: 'tree /Users/runner/hostedtoolcache/PyPy/2.7.13/x64'
-        condition: and(succeeded(), eq(variables['image_name'], 'macOs'), in(variables['TOXENV'], 'pypy'))
-      - script: 'tree /Users/runner/hostedtoolcache/PyPy/3.6.9/x64'
-        condition: and(succeeded(), eq(variables['image_name'], 'macOs'), in(variables['TOXENV'], 'pypy3'))
       - task: UsePythonVersion@0
         condition: and(succeeded(), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35'))
         displayName: provision cpython 2
