add a write through filesystem cache with locks for py informat… (#1505)
* add a write through filesystem cache with locks for py information queries via sys executables

this speeds up significantly the creation process, as calling
subprocesess is at least an order of mangitued slower than reading the
information from a json dump

We also now default to the built-in mechanism

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

* fix

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

* make file lock reentrant and thread safe

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,9 @@ project_urls =
 packages = find:
 install_requires =
     appdirs>=1.4.3,<2
+    filelock>=3.0.0,<4
     six>=1.12.0,<2
+    contextlib2>=0.6.0,<1;python_version<"3.3"
     distlib>=0.3.0,<1;sys.platform == 'win32'
     importlib-metadata>=0.12,<2;python_version<"3.8"
     importlib-resources>=1.0,<2;python_version<"3.7"
@@ -86,7 +88,7 @@ testing =
     packaging>=20.0;python_version>"3.4"
     pytest >= 4.0.0, <6
     coverage >= 4.5.1, <6
-    pytest-mock >= 1.12.1, <2
+    pytest-mock >= 2.0.0, <3
     pytest-env >= 0.6.2, <1
     xonsh >= 0.9.13, <1; python_version > '3.4'
 
@@ -109,12 +111,8 @@ formats = gztar
 universal = true
 
 [tool:pytest]
+timeout = 200
 markers =
-    bash
-    csh
-    fish
-    pwsh
-    xonsh
     slow
 junit_family = xunit2
 addopts = --tb=auto -ra --showlocals
