rewrite the documentation
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,8 +82,8 @@ virtualenv.seed =
 [options.extras_require]
 docs =
     sphinx >= 2.0.0, < 3
-    towncrier >= 18.5.0
-    sphinx_rtd_theme >= 0.4.2, < 1
+    sphinx-rtd-theme >= 0.4.3, <1
+    towncrier >= 19.9.0rc1
 testing =
     packaging>=20.0;python_version>"3.4"
     pytest >= 4.0.0, <6
