--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,42 +11,10 @@ line-length = 120
 
 [tool.towncrier]
     package = "virtualenv"
+    package_dir = "src"
     filename = "docs/changes.rst"
     directory = "docs/changelog"
-    template = "docs/changelog/template.jinja2"
-    title_format = "v{version} ({project_date})"
+    title_format = false
     issue_format = "`#{issue} <https://github.com/pypa/virtualenv/issues/{issue}>`_"
-    underlines = ["-", "^"]
-
-    [[tool.towncrier.section]]
-        path = ""
-
-    [[tool.towncrier.type]]
-        directory = "bugfix"
-        name = "Bugfixes"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "feature"
-        name = "Features"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "deprecation"
-        name = "Deprecations (removal in next major release)"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "breaking"
-        name = "Backward incompatible changes"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "doc"
-        name = "Documentation"
-        showcontent = true
-
-    [[tool.towncrier.type]]
-        directory = "misc"
-        name = "Miscellaneous"
-        showcontent = true
+    template = "docs/changelog/template.jinja2"
+    # possible types, all default: feature, bugfix, doc, removal, misc
