--- a/tox.ini
+++ b/tox.ini
@@ -73,7 +73,7 @@ basepython = python3.8
 description = build documentation
 extras = docs
 commands =
-    sphinx-build -d "{envtmpdir}/doctree" -W docs "{toxworkdir}/docs_out" --color -bhtml {posargs}
+    sphinx-build -d "{envtmpdir}/doctree" docs "{toxworkdir}/docs_out" --color -bhtml {posargs}
     python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:package_readme]
@@ -114,7 +114,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = _subprocess,appdirs,coverage,filelock,git,packaging,pytest,setuptools,six
+known_third_party = _subprocess,appdirs,coverage,docutils,filelock,git,packaging,pytest,setuptools,six,sphinx_rtd_theme,sphinxarg
 
 [flake8]
 max-complexity = 22
