rewrite the documentation
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long_description_content_type = text/markdown
 url = https://virtualenv.pypa.io/
 author = Bernat Gabor
 license = MIT
-license_file = LICENSE.txt
+license_file = LICENSE
 platforms = any
 classifiers =
     Development Status :: 5 - Production/Stable
@@ -24,6 +24,8 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Testing
     Topic :: Utilities
@@ -75,15 +77,15 @@ virtualenv.create =
 virtualenv.discovery =
     builtin = virtualenv.discovery.builtin:Builtin
 virtualenv.seed =
-    none = virtualenv.seed.none:NoneSeeder
     pip = virtualenv.seed.embed.pip_invoke:PipInvoke
     app-data = virtualenv.seed.via_app_data.via_app_data:FromAppData
 
 [options.extras_require]
 docs =
     sphinx >= 2.0.0, < 3
-    towncrier >= 18.5.0
-    sphinx_rtd_theme >= 0.4.2, < 1
+    sphinx-argparse >= 0.2.5, <1
+    sphinx-rtd-theme >= 0.4.3, <1
+    towncrier >= 19.9.0rc1
 testing =
     packaging>=20.0;python_version>"3.4"
     pytest >= 4.0.0, <6
