--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
         args: [--safe]
         language_version: python3.8
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v1.4.0
+    rev: v1.5.0-1
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black==19.10b0]
@@ -38,7 +38,7 @@ repos:
         additional_dependencies: ["flake8-bugbear == 20.1.2"]
         language_version: python3.8
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v1.26.0
+    rev: v1.26.2
     hooks:
     -   id: pyupgrade
 -   repo: https://github.com/pre-commit/pygrep-hooks
