--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,9 @@ envlist =
     py27,
     pypy,
     pypy3,
-    coverage
+    coverage,
+    readme,
+    docs,
 isolated_build = true
 skip_missing_interpreters = true
 
@@ -73,7 +75,7 @@ basepython = python3.8
 description = build documentation
 extras = docs
 commands =
-    sphinx-build -d "{envtmpdir}/doctree" -W docs "{toxworkdir}/docs_out" --color -bhtml {posargs}
+    sphinx-build -d "{envtmpdir}/doctree" docs "{toxworkdir}/docs_out" --color -b html {posargs}
     python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:readme]
@@ -101,7 +103,7 @@ description = format the code base to adhere to our styles, and complain about w
 basepython = python3.8
 passenv = *
 deps = {[testenv]deps}
-       pre-commit >= 1.17.0, <2
+       pre-commit >= 2.0.0, <3
 skip_install = True
 commands =
     pre-commit run --all-files --show-diff-on-failure
@@ -114,7 +116,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = _subprocess,appdirs,coverage,filelock,git,packaging,pytest,setuptools,six
+known_third_party = _subprocess,appdirs,coverage,docutils,filelock,git,packaging,pytest,setuptools,six,sphinx,sphinx_rtd_theme,sphinxarg
 
 [flake8]
 max-complexity = 22
@@ -128,6 +130,9 @@ max-line-length = 120
 description = generate a DEV environment
 extras = testing, docs
 usedevelop = True
+deps =
+    {[testenv]deps}
+    docutils-stubs >= 0.0.21, <1
 commands =
     python -m pip list --format=columns
     python -c 'import sys; print(sys.executable)'
@@ -140,7 +145,7 @@ passenv = *
 deps =
     {[testenv]deps}
     gitpython >= 2.1.10, < 3
-    towncrier >= 18.5.0
+    towncrier >= 19.9.0rc1
     packaging  >= 17.1
 changedir = {toxinidir}/tasks
 commands =
