Correct the casing of PyPI

--- a/tox.ini
+++ b/tox.ini
@@ -77,7 +77,7 @@ commands =
     python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:package_readme]
-description = check that the long description is valid (need for PyPi)
+description = check that the long description is valid (need for PyPI)
 deps =
     {[testenv]deps}
     twine >= 1.12.1
