--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ zip_safe = True
 
 [options.entry_points]
 console_scripts =
-    virtualenv=virtualenv.__main__:run
+    virtualenv=virtualenv.__main__:run_with_catch
 virtualenv.activate =
     bash = virtualenv.activation.bash:BashActivator
     cshell = virtualenv.activation.cshell:CShellActivator
