--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 name = virtualenv
 version = attr: virtualenv.__version__
 description = Virtual Python Environment builder
-long_description = file: README.rst
-long_description_content_type = text/x-rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://virtualenv.pypa.io/
 author = Bernat Gabor
 license = MIT
