--- a/tox.ini
+++ b/tox.ini
@@ -76,7 +76,7 @@ commands =
     sphinx-build -d "{envtmpdir}/doctree" -W docs "{toxworkdir}/docs_out" --color -bhtml {posargs}
     python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
-[testenv:package_readme]
+[testenv:readme]
 description = check that the long description is valid (need for PyPI)
 deps =
     {[testenv]deps}
