--- a/tox.ini
+++ b/tox.ini
@@ -126,17 +126,6 @@ ignore = E203, W503, C901, E402
 [pep8]
 max-line-length = 120
 
-[testenv:dev]
-description = generate a DEV environment
-extras = testing, docs
-usedevelop = True
-deps =
-    {[testenv]deps}
-    docutils-stubs >= 0.0.21, <1
-commands =
-    python -m pip list --format=columns
-    python -c 'import sys; print(sys.executable)'
-
 [testenv:release]
 description = do a release, required posarg of the version number
 basepython = python3.8
@@ -144,12 +133,25 @@ skip_install = true
 passenv = *
 deps =
     {[testenv]deps}
-    gitpython >= 2.1.10, < 3
+    gitpython >= 3.0.0, < 4
     towncrier >= 19.9.0rc1
     packaging  >= 17.1
 changedir = {toxinidir}/tasks
 commands =
     python release.py --version {posargs}
+
+[testenv:dev]
+description = generate a DEV environment
+extras = testing, docs
+usedevelop = True
+deps =
+    {[testenv]deps}
+    {[testenv:release]deps}
+    docutils-stubs >= 0.0.21, <1
+    setuptools_scm[toml]>=3.4
+commands =
+    python -m pip list --format=columns
+    python -c 'import sys; print(sys.executable)'
 
 [testenv:zipapp]
 description = generate a zipapp
