--- a/tox.ini
+++ b/tox.ini
@@ -58,7 +58,7 @@ commands =
     coverage report --show-missing
     coverage xml -o {toxworkdir}/coverage.xml
     coverage html -d {toxworkdir}/htmlcov
-    diff-cover --compare-branch {env:DIFF_AGAINST:origin/rewrite} {toxworkdir}/coverage.xml
+    diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
 depends =
     py38,
     py37,
@@ -130,7 +130,6 @@ max-line-length = 120
 [testenv:release]
 description = do a release, required posarg of the version number
 basepython = python3.8
-skip_install = true
 passenv = *
 deps =
     {[testenv]deps}
