fix system executable discovery (#1550)
* fix system executable discovery

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

* time to eat our own dogfood

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

* seems Path.absolute should not be used

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,6 +77,12 @@ jobs:
               pathtoPublish: $(Build.ArtifactStagingDirectory)
               ArtifactName: virtualenv.pyz
     before:
+      - script: '$(toxPython.pythonLocation)/python -m pip install "virtualenv < 20"'
+        displayName: pypy3 tox needs fix to accomodate separate bin and Script
+        condition: and(succeeded(), eq(variables['image_name'], 'windows'), in(variables['TOXENV'], 'pypy3'))
+      - script: '$(toxPython.pythonLocation)/python -m pip install .'
+        displayName: tox uses this virtualenv (eat our own dogfood)
+        condition: not(and(succeeded(), eq(variables['image_name'], 'windows'), in(variables['TOXENV'], 'pypy3')))
       - script: 'sudo apt-get update -y && sudo apt-get install fish csh'
         condition: and(succeeded(), eq(variables['image_name'], 'linux'), in(variables['TOXENV'], 'py38', 'py37', 'py36', 'py35', 'py27', 'pypy', 'pypy3'))
         displayName: install fish and csh via apt-get
