start adding macos support
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,7 @@ virtualenv.create =
     cpython3-posix = virtualenv.create.via_global_ref.builtin.cpython.cpython3:CPython3Posix
     cpython3-win = virtualenv.create.via_global_ref.builtin.cpython.cpython3:CPython3Windows
     cpython2-posix = virtualenv.create.via_global_ref.builtin.cpython.cpython2:CPython2Posix
+    cpython2-mac-framework = virtualenv.create.via_global_ref.builtin.cpython.mac_os:CPython2macOsFramework
     cpython2-win = virtualenv.create.via_global_ref.builtin.cpython.cpython2:CPython2Windows
     pypy2-posix = virtualenv.create.via_global_ref.builtin.pypy.pypy2:PyPy2Posix
     pypy2-win = virtualenv.create.via_global_ref.builtin.pypy.pypy2:Pypy2Windows
