add timeout for tests
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,6 +93,7 @@ testing =
     coverage >= 4.5.1, <6
     pytest-mock >= 2.0.0, <3
     pytest-env >= 0.6.2, <1
+    pytest-timeout >= 1.3.4, <2
     xonsh >= 0.9.13, <1; python_version > '3.4'
 
 [options.package_data]
@@ -114,7 +115,6 @@ formats = gztar
 universal = true
 
 [tool:pytest]
-timeout = 200
 markers =
     slow
 junit_family = xunit2
