--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ commands =
     python -m coverage run\
     -m pytest \
     --junitxml {toxworkdir}/junit.{envname}.xml \
+    --timeout 20 \
     tests {posargs:--int}
 
     python -m coverage combine
