Run test suite in parallel
Disable timeout as machine loads makes it hard to quantify good
timeouts.

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/tox.ini
+++ b/tox.ini
@@ -36,8 +36,7 @@ commands =
     python -m coverage run\
     -m pytest \
     --junitxml {toxworkdir}/junit.{envname}.xml \
-    --timeout 30 \
-    tests {posargs:--int}
+    tests {posargs:--int -n auto}
 
     python -m coverage combine
     python -m coverage report
