--- a/setup.cfg
+++ b/setup.cfg
@@ -92,9 +92,9 @@ testing =
     packaging>=20.0;python_version>"3.4"
     pytest >= 4.0.0, <6
     coverage >= 4.5.1, <6
+    pytest-xdist >= 1.31.0, <2
     pytest-mock >= 2.0.0, <3
     pytest-env >= 0.6.2, <1
-    pytest-timeout >= 1.3.4, <2
     xonsh >= 0.9.16, <1; python_version > '3.4'
 
 [options.package_data]
