Run test suite in parallel (#1786)

--- a/tox.ini
+++ b/tox.ini
@@ -25,22 +25,24 @@ setenv =
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
     PYTHONIOENCODING=utf-8
-    PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
+    {py34,py27,pypy}: PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
 commands =
-    python -c 'from os.path import sep; file = open(r"{envsitepackagesdir}\{\}coverage-virtualenv.pth".format(sep), "w"); file.write("import coverage; coverage.process_startup()"); file.close()'
-    python -m coverage erase
-
-    python -m coverage run\
-    -m pytest \
+    coverage erase
+    coverage run -m pytest \
     --junitxml {toxworkdir}/junit.{envname}.xml \
-    --timeout 30 \
-    tests {posargs:--int}
+    tests {posargs:--int -n {env:PYTEST_XDIST:auto}}
 
-    python -m coverage combine
-    python -m coverage report
+    coverage combine
+    coverage report
+    coverage html -d {envtmpdir}/htmlcov
+
+[testenv:pypy]
+setenv =
+    {[testenv]setenv}
+    PYTEST_XDIST = 0
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
