--- a/setup.cfg
+++ b/setup.cfg
@@ -83,19 +83,20 @@ virtualenv.seed =
 
 [options.extras_require]
 docs =
-    sphinx >= 2.0.0, < 3
-    sphinx-argparse >= 0.2.5, <1
-    sphinx-rtd-theme >= 0.4.3, <1
+    sphinx >= 3
+    sphinx-argparse >= 0.2.5
+    sphinx-rtd-theme >= 0.4.3
     towncrier >= 19.9.0rc1
-    proselint >= 0.10.2, <1
+    proselint >= 0.10.2
 testing =
     packaging>=20.0;python_version>"3.4"
-    pytest >= 4.0.0, <6
-    coverage >= 4.5.1, <6
-    pytest-mock >= 2.0.0, <3
-    pytest-env >= 0.6.2, <1
-    pytest-timeout >= 1.3.4, <2
-    xonsh >= 0.9.16, <1; python_version > '3.4'
+    pytest >= 4
+    coverage >= 5
+    coverage_enable_subprocess >= 1
+    pytest-xdist >= 1.31.0
+    pytest-mock >= 2
+    pytest-env >= 0.6.2
+    xonsh >= 0.9.16; python_version > '3.4'
 
 [options.package_data]
 virtualenv.activation.bash = *.sh
