Fix CPython2 not found on Windows via registry
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ commands =
     coverage erase
     coverage run -m pytest \
     --junitxml {toxworkdir}/junit.{envname}.xml \
-    tests {posargs:--int -n {env:PYTEST_XDIST:auto}}
+    tests {posargs:--int -n {env:PYTEST_XDIST:0}}
 
     coverage combine
     coverage report
