Add pytest timeout with some high upper limit
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -97,6 +97,7 @@ testing =
     pytest-mock >= 2
     pytest-env >= 0.6.2
     pytest-randomly >= 1
+    pytest-timeout
     xonsh >= 0.9.16; python_version > '3.4'
 
 [options.package_data]
