--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ setenv =
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
     PYTHONIOENCODING=utf-8
     {py34,py27,pypy}: PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
+    {pypy,py27}: PYTEST_XDIST = 0
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
@@ -38,11 +39,6 @@ commands =
     coverage combine
     coverage report
     coverage html -d {envtmpdir}/htmlcov
-
-[testenv:pypy]
-setenv =
-    {[testenv]setenv}
-    PYTEST_XDIST = 0
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
