--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,52 +1,61 @@
 repos:
--   repo: https://github.com/ambv/black
-    rev: 19.10b0
-    hooks:
-    -   id: black
-        args: [--safe]
-        language_version: python3.8
--   repo: https://github.com/asottile/blacken-docs
-    rev: v1.6.0
-    hooks:
-    -   id: blacken-docs
-        additional_dependencies: [black==19.10b0]
-        language_version: python3.8
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v2.1.1
-    hooks:
-    -   id: seed-isort-config
-        args: [--application-directories, '.:src']
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
-    hooks:
-    -   id: isort
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: debug-statements
-    -   id: check-merge-conflict
-    -   id: trailing-whitespace
-    -   id: check-docstring-first
-    -   id: check-ast
-    -   id: check-docstring-first
-    -   id: check-toml
-    -   id: check-toml
-    -   id: flake8
-        additional_dependencies: ["flake8-bugbear == 20.1.2"]
-        language_version: python3.8
--   repo: https://github.com/asottile/pyupgrade
-    rev: v2.3.0
-    hooks:
-    -   id: pyupgrade
--   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.5.1
-    hooks:
-    -   id: rst-backticks
--   repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.9.0
-    hooks:
-    -   id: setup-cfg-fmt
-        args: [--min-py3-version, "3.4"]
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.5.0
+  hooks:
+  - id: check-ast
+  - id: check-builtin-literals
+  - id: check-docstring-first
+  - id: check-merge-conflict
+  - id: check-yaml
+  - id: check-toml
+  - id: debug-statements
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+- repo: https://github.com/asottile/add-trailing-comma
+  rev: v2.0.1
+  hooks:
+  - id: add-trailing-comma
+- repo: https://github.com/asottile/yesqa
+  rev: v1.1.0
+  hooks:
+  - id: yesqa
+- repo: https://github.com/asottile/pyupgrade
+  rev: v2.4.1
+  hooks:
+  - id: pyupgrade
+- repo: https://github.com/asottile/seed-isort-config
+  rev: v2.1.1
+  hooks:
+  - id: seed-isort-config
+    args: [--application-directories, '.:src']
+- repo: https://github.com/pre-commit/mirrors-isort
+  rev: v4.3.21
+  hooks:
+  - id: isort
+- repo: https://github.com/ambv/black
+  rev: 19.10b0
+  hooks:
+  - id: black
+    args: [--safe]
+    language_version: python3.8
+- repo: https://github.com/asottile/blacken-docs
+  rev: v1.7.0
+  hooks:
+  - id: blacken-docs
+    additional_dependencies: [black==19.10b0]
+    language_version: python3.8
+- repo: https://github.com/pre-commit/pygrep-hooks
+  rev: v1.5.1
+  hooks:
+  - id: rst-backticks
+- repo: https://github.com/asottile/setup-cfg-fmt
+  rev: v1.9.0
+  hooks:
+  - id: setup-cfg-fmt
+    args: [--min-py3-version, "3.4"]
+- repo: https://gitlab.com/pycqa/flake8
+  rev: "3.8.1"
+  hooks:
+  - id: flake8
+    additional_dependencies: ["flake8-bugbear == 20.1.2"]
+    language_version: python3.8
